--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ local.properties
 # node.js
 #
 node_modules/
+coverage/
 npm-debug.log
 yarn-error.log
 
@@ -57,3 +58,6 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+# VSCode
+.vscode/
